syntax = "proto3";
option go_package = "proto";
package proto;
import "common.proto";


message CreateAccountRequest {
	Merchant Account = 1;
}

message CreateAccountResponse {
	uint32 ID = 1;
}

message DeleteAccountRequest {
	uint32 ID = 1;
}

message DeleteAccountResponse {
	bool IsDeleted = 1;
}

message UpdateAccountRequest {
	uint32 ID = 1;
	Merchant Account = 2;
}

message UpdateAccountResponse {
	Merchant Account = 1;
}

message GetAccountRequest {
	uint32 ID = 1;
}

message GetAccountResponse {
	Merchant Account = 1;
}

message GetAccountsRequest{
	repeated uint32 IDs = 1;
	uint32 AccountLimit = 2;
}

message GetAccountsResponse {
	repeated Merchant Accounts = 1;
}
